script node根据配置所在文件夹热加载bot